tools/kubernetes/yaml/cert-manager/ingress-http.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hue-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    # certmanager.k8s.io/acme-challenge-type: http01
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: demo.gethue.com
    http:
      paths:
      - backend:
          serviceName: hue-balancer
          servicePort: 80
        path: /
  # tls:
  # - hosts:
  #   - demo.gethue.com
  #   secretName: letsencrypt-pro
